1) Changed dark mode for basic mode 2) Fixed margin problem in form-job div

--- a/src/components/Sections/Player.css
+++ b/src/components/Sections/Player.css
@@ -48,9 +48,9 @@
     margin: 0 1rem;
     cursor: pointer;
 }
-.controls-btn__action:hover{
+/* .controls-btn__action:hover{
     color: white;
-}
+} */
 
 .controls-btn__action .pp {
     font-size: 4rem;
