--- a/src/components/Sections/UserData.css
+++ b/src/components/Sections/UserData.css
@@ -48,7 +48,7 @@
 }
 
 .form-job {
-    margin: 5px 20px 20px;
+    margin: 5px 20px 40px;
 }
 
 .form-avatar {
